# dmidecode-win

./: .gitignore  CMakeLists.txt  biosdecode.c  config.h  dmidecode.c  dmiopt.c  getopt.h  types.h  util.c
